--- a/projects/md5sum/Makefile
+++ b/projects/md5sum/Makefile
@@ -1,7 +1,7 @@
 TARGET=md5sum
 
 all:
-	docker run --user $$(id -u $$USER):$$(id -g $$USER) --rm --mount type=bind,src=$$(pwd),dst=/TASE/install/project/ tase bash -c 'cd /TASE/install/ && TARGET=$(TARGET) make'  
+	docker run --user $$(id -u $$USER):$$(id -g $$USER) --rm --mount type=bind,src=$$(pwd),dst=/TASE/install/project/ tase2 bash -c 'cd /TASE/install/ && TARGET=$(TARGET) make'  
 
 
 clean:
@@ -9,3 +9,5 @@ clean:
 	rm -f $(TARGET)* $(TARGET)* run_$(TARGET).sh
 	rm -rf tmp/
 	rm -f src/*.o
+	rm -f Monitor*
+	rm -f cartridge_info.txt
