--- a/tase/Makefile
+++ b/tase/Makefile
@@ -1,15 +1,16 @@
-SRC=$(BUILD_DIR)/tase/
-DST=$(BUILD_DIR)/build/tase/
+SRC=$(BUILD_DIR)/tase/src/
+DST=$(BUILD_DIR)/build/tase
 
-TASE_OBJSA=$(addprefix $(DST)/springboard/,$(basename $(wildcard $(SRC)/springboard/*.c) $(wildcard $(SRC)/springboard/*.S)))
+TASE_OBJSA=$(addsuffix .o,$(addprefix $(DST)/springboard/,$(basename $(notdir $(wildcard $(SRC)/springboard/*.c) $(wildcard $(SRC)/springboard/*.S)))))
 
-TASE_OBJSB=$(addprefix $(DST)/,$(basename $(wildcard $(SRC)/*.c)))
+TASE_OBJSB=$(addsuffix .o,$(addprefix $(DST)/,$(basename $(notdir $(wildcard $(SRC)/*.c)))))
 
-TASE_SHIMOBJS=$(addprefix $(DST)/traps/,$(basename $(wildcard $(SRC)/traps/*.c)))
+#TASE_SHIMOBJS=$(addsuffix .o,$(addprefix $(DST)/traps/,$(basename $(notdir $(wildcard $(SRC)/traps/*.c)))))
+TASE_SHIMOBJS=$(DST)/traps/tase_shims.o
 
 TASE_OBJS=$(TASE_OBJSA) $(TASE_OBJSB) $(TASE_SHIMOBJS) $(SFLOAT_OBJS)
 
-SFLOAT_OBJS=$(addprefix $(DST)/compiler-rt_soft_float/,$(addsuffix .o,$(basename $(wildcard $(SRC)compiler-rt_soft_float/*.c))))
+SFLOAT_OBJS=$(addprefix $(DST)/compiler-rt_soft_float/,$(addsuffix .o,$(basename $(notdir $(wildcard $(SRC)compiler-rt_soft_float/*.c)))))
 
 
 all: $(RUN_DIR)/lib/libtase.a $(TASE_LINK)
@@ -17,14 +18,23 @@ all: $(RUN_DIR)/lib/libtase.a $(TASE_LINK)
 $(TASE_LINK):
 	cp $(BUILD_DIR)/tase/tase_link.ld $(RUN_DIR)/tase_link.ld
 
-$(RUN_DIR)/lib/libtase.a: $(TASE_OBJS)
+$(RUN_DIR)/lib/libtase.a: dirs $(TASE_OBJS)
+	mkdir -p $(RUN_DIR)/lib/
 	ar crs $(RUN_DIR)/lib/libtase.a $(TASE_OBJS)
 
-$(DST)/traps/%.o: $(SRC)/traps/%.c $(SRC)/traps/%.S
-	$(TASE_CLANG) -fPIC -c -O1 -DTASE_TSX -DTASE_ENABLE=1 -I$(BUILD_DIR)/test/tase/include/  $(MODELED_FN_ARG) $< -o $@
+.phony: dirs
+dirs:
+	mkdir -p $(DST)/traps/ $(DST)/compiler-rt_soft_float/ $(DST)/springboard/
+
+$(DST)/springboard/%.o: $(SRC)/springboard/%.c
+	$(TASE_CLANG) -fPIC -c -O1 -DTASE_TSX -DTASE_ENABLE=1 -I$(INCLUDE_DIR)/tase/  $(MODELED_FN_ARG) $< -o $@
+
+$(DST)/springboard/%.o: $(SRC)/springboard/%.S
+	$(TASE_CLANG) -fPIC -c -O1 -DTASE_TSX -DTASE_ENABLE=1 -I$(INCLUDE_DIR)/tase/  $(MODELED_FN_ARG) $< -o $@
+
 
 $(DST)/%.o: $(SRC)/%.c
-	$(CLANG) -fPIC -c -O1 -I$(BUILD_DIR)/test/tase/include/ $< -o $@
+	$(CLANG) -fPIC -c -O1 -I$(INCLUDE_DIR)/tase/ $< -o $@
 
 $(DST)/traps/%.o: $(SRC)/traps/%.c
 	$(TASE_CLANG) -fPIC -c -O0 $(NO_FLOAT_ARG) $(MODELED_FN_ARG) $< -o $@
