cleaning up makefiles

--- a/microbenchmarks/concrete/sha256/Makefile
+++ b/microbenchmarks/concrete/sha256/Makefile
@@ -1,4 +1,4 @@
 ROOT?=/project
 BIN?=main
 all:
-	docker run --user $$(id -u):$$(id -g) --rm -it --mount type=bind,src=$$(pwd),dst=/project/ tase bash -c 'cd $(ROOT) && make -f build.Makefile $(BIN)'
+	docker run --user $$(id -u):$$(id -g) --rm -it --mount type=bind,src=$$(pwd),dst=/project/ tase bash -c 'cd $(ROOT) && make -f build.Makefile'
